--- a/mysite/static/css/base.css
+++ b/mysite/static/css/base.css
@@ -1,3 +1,43 @@
+
+
+
+
+/*
 a {
-    color: rgb(255, 0, 0);
+    color: rgb(136, 0, 0);
 }
+
+html {
+	background-color: pink;
+	color: black;
+}
+
+.navtext {
+	color: grey;
+
+}
+
+#logo {
+
+}
+
+h1, form {
+    width: 200px;
+    height: 100px;
+    background: red;
+    position: relative;
+    -webkit-animation: mymove 5s infinite; 
+    animation: mymove 5s infinite;
+}
+
+@-webkit-keyframes mymove {
+    from {left: 0px;}
+    to {left: 200px;}
+}
+
+@keyframes mymove {
+    from {left: 0px;}
+    to {left: 200px;}
+}
+
+*/
